# arcops-mcp

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  chat.bat  chat.sh  package-lock.json  pyproject.toml  start.ps1
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  chat.py  simple_chat.py
cli/: __init__.py  __main__.py
diagrams/: arcops-architecture-horizontal.html  arcops-architecture-v2.html
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DEMO_STRATEGY.md  DESIGN_PHASE2.md  PRIVACY_SECURITY.md  REAL_INTEGRATION.md  REDESIGN.md  SOP.md  SOURCES.md  SPEC.md  TOOL_REGISTRY.md  VISION.md  sop.md.txt
policies/: inference-thresholds.yaml  network-sovereign.yaml  supply-chain-default.yaml
results/: egress.json  envcheck.json  validate.json
schemas/: approval.schema.json  findings.schema.json  gpu-readiness.schema.json  inference-validation.schema.json  safety-report.schema.json
scripts/: install-foundry-service.ps1  setup-autostart.ps1
server/: __init__.py  api_routes.py  api_routes_clean.py  azure_context.py  chat_service.py  main.py  main_clean.py  mcp_manifest.json  mcp_server.py  model_manager.py
server/config/: endpoints.yaml
server/services/: __init__.py  artifact_signer.py  policy_engine.py
server/tools/: __init__.py  aks_arc_validate.py  aksarc_logs_tool.py  aksarc_support_tool.py  arc_connectivity_check.py  arc_gateway_egress_check.py  azlocal_envcheck_wrap.py  azlocal_tsg_tool.py  base.py  diagnostics_bundle.py  educational_tool.py
server/tools/packs/: __init__.py  foundry_validate.py  gpu_check.py  network_safety.py  supply_chain_gate.py
tests/: __init__.py  test_aksarc_logs.py  test_aksarc_support.py  test_educational_tool.py  test_egress_check.py  test_envcheck_wrap.py  test_findings_schema.py  test_tsg_tool.py
tests/fixtures/: aksarc_support_sample.json  connectivity_sample.json  egress_ok.json  envcheck_sample.json  findings_sample.json  tsg_search_sample.json
tests/test_packs/: __init__.py  test_gpu_foundry.py  test_network_safety.py  test_supply_chain.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.simple.tsx  App.tsx  App.tsx.full-backup  index.css  vite-env.d.ts
ui/src/components/: ArchitectureDiagram.tsx  ChatPanel.tsx  ChatPanelClean.tsx  CheckCard.tsx  LearnPanel.tsx  LiveToolVisualization.tsx
