[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcops-mcp"
version = "0.2.0"
description = "MCP-powered operations bridge for Azure Local + AKS Arc"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "smitzlroy", email = "smitzlroy@users.noreply.github.com" }
]
keywords = ["mcp", "azure", "arc", "aks", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.0",
    "httpx>=0.26.0",
    "jsonschema>=4.21.0",
    "mcp>=1.0.0",  # Official MCP Python SDK
]

[project.optional-dependencies]
agent = [
    "foundry-local-sdk>=0.1.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    "types-PyYAML>=6.0.12",
    "types-jsonschema>=4.21.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
arcops = "cli.__main__:app"

[project.urls]
Homepage = "https://github.com/smitzlroy/arcops-mcp"
Documentation = "https://github.com/smitzlroy/arcops-mcp/tree/main/docs"
Repository = "https://github.com/smitzlroy/arcops-mcp"
Issues = "https://github.com/smitzlroy/arcops-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["server", "cli"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hatch
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | dist
  | node_modules
  | ui/dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", ".hatch", ".mypy_cache", ".pytest_cache", ".venv", "dist", "node_modules", "ui/dist"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = [
    "ui/",
    "tests/",
    ".venv/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pylint.main]
ignore = ["ui", ".venv", "dist", "node_modules"]
jobs = 0
py-version = "3.11"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "line-too-long",  # black handles this
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["server", "cli"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
